--- a/.github/workflows/push-actions.yml
+++ b/.github/workflows/push-actions.yml
@@ -55,6 +55,10 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: '3.8'
+      - name: Configure Git
+        run: |
+          git config --global user.email "london@agiletek.co.uk"
+          git config --global user.name "AgileTek Admin"
       - name: Deploy to PyPi
         run: |
           . install_poetry.sh
