--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,21 +1,21 @@
 repos:
   - repo: https://github.com/pycqa/isort
-    rev: 5.10.1
+    rev: 5.12.0
     hooks:
       - id: isort
         name: isort (python)
-        args: [ "--profile", "black" ]
-  -   repo: https://github.com/ambv/black
-      rev: 22.3.0
-      hooks:
-        - id: black
-          language_version: python3.8
-  -   repo: https://gitlab.com/pycqa/flake8
-      rev: 3.9.2
-      hooks:
-        -   id: flake8
-          # Enables us to have up to 88 line files while attempting
-          # to reformat for 80
-          # https://github.com/psf/black#line-length
-          # https://github.com/PyCQA/flake8-bugbear#opinionated-warnings
-            additional_dependencies: ["flake8-bugbear==19.3.0"]
+        args: ["--profile", "black"]
+  - repo: https://github.com/ambv/black
+    rev: 23.1.0
+    hooks:
+      - id: black
+  - repo: https://github.com/pycqa/flake8
+    rev: 6.0.0
+    hooks:
+      - id: flake8
+        additional_dependencies: ["flake8-bugbear==19.3.0"]
+  - repo: https://github.com/python-poetry/poetry
+    rev: 1.3.0
+    hooks:
+      - id: poetry-check
+      - id: poetry-lock
