--- a/.github/workflows/push-actions.yml
+++ b/.github/workflows/push-actions.yml
@@ -2,12 +2,15 @@ name: Build
 
 on: push
 
+env:
+  SKIP: ${{ vars.SKIP }}
+
 jobs:
   default:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ "3.8", "3.9" ]
+        python-version: ["3.8", "3.9", "3.10"]
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
@@ -34,7 +37,7 @@ jobs:
       - name: Set up Python 3.8
         uses: actions/setup-python@v3
         with:
-          python-version: '3.8'
+          python-version: "3.8"
       - name: Configure Git
         run: |
           git config --global user.email "github-actions@github.com"
@@ -58,7 +61,7 @@ jobs:
       - name: Set up Python 3.8
         uses: actions/setup-python@v3
         with:
-          python-version: '3.8'
+          python-version: "3.8"
       - name: Configure Git
         run: |
           git config --global user.email "github-actions@github.com"
