--- a/.github/workflows/push-actions.yml
+++ b/.github/workflows/push-actions.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           . install_poetry.sh
           poetry install
-      - name: Format code
+      - name: Pre-commit
         run: |
           poetry run pre-commit run -a
       - name: Run tests
