--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,10 @@
 name: Build
 
-on: push
+on:
+  push:
+  pull_request:
+    branches:
+      - main
 
 env:
   SKIP: ${{ vars.SKIP }}
@@ -10,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
@@ -31,13 +35,13 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
     needs: default
-    if: github.ref == 'refs/heads/main'
+    if: startsWith(github.ref, 'refs/heads/release')
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python 3.8
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.8"
+          python-version: "3.12"
       - name: Configure Git
         run: |
           git config --global user.email "github-actions@github.com"
@@ -55,13 +59,13 @@ jobs:
     runs-on: ubuntu-latest
     environment: staging
     needs: default
-    if: startsWith(github.ref, 'refs/heads/release')
+    if: startsWith(github.ref, 'refs/heads/prerelease')
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python 3.8
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.8"
+          python-version: "3.12"
       - name: Configure Git
         run: |
           git config --global user.email "github-actions@github.com"
