Add coverage badge.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,3 +9,12 @@ repos:
     hooks:
       - id: poetry-check
       - id: poetry-lock
+  - repo: https://github.com/Weird-Sheep-Labs/coverage-pre-commit
+    rev: 0.0.1
+    hooks:
+      - id: coverage-xml
+        args: [-o, reports/coverage/coverage.xml]
+        stages: ["pre-push"]
+      - id: coverage-badge
+        args: [-o, reports/coverage/badge.svg]
+        stages: ["pre-push"]
