--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,11 +23,11 @@ Django = ">=3.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.1.2"
-pre-commit = "^2.19.0"
 pytest-cov = "^3.0.0"
 coverage = {extras = ["toml"], version = "^6.4.1"}
 pytest-django = "^4.5.2"
 mixer = "^7.2.2"
+pre-commit = "~3"
 
 [tool.pytest.ini_options]
 addopts = "--cov . -v --cov-report=html"
